@@ -1,3 +1,9 @@
+2015-01-29  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/64717
+	* cp-ubsan.c (cp_ubsan_instrument_vptr): Don't wrap vptr
+	into SAVE_EXPR.
+
 2015-01-29  Jason Merrill  <jason@redhat.com>
 
 	PR c++/49508
